[gd_scene load_steps=7 format=3 uid="uid://c3ivuprkcunht"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_y4rcl"]
[ext_resource type="PackedScene" uid="uid://c51vx8iq5wpff" path="res://scenes/pause_manager.tscn" id="2_k57vt"]
[ext_resource type="LabelSettings" uid="uid://djlreeuvaybhc" path="res://16pxLabelSettings.tres" id="3_oia73"]
[ext_resource type="LabelSettings" uid="uid://c5s06bpxvxfy0" path="res://24pxLabelSettings.tres" id="4_de4ug"]
[ext_resource type="AudioStream" uid="uid://b5td44yj4blkb" path="res://sounds/click.wav" id="5_wavpm"]
[ext_resource type="AudioStream" uid="uid://btfxxodd8rhk7" path="res://sounds/switch.wav" id="6_2w2a0"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_y4rcl")

[node name="TopRight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_bottom = 311.0
grow_horizontal = 0
mouse_filter = 2

[node name="Panel" type="Panel" parent="TopRight"]
self_modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TopRight/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TopRight/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HBoxContainer" type="HBoxContainer" parent="TopRight/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TopRight/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next:"
label_settings = ExtResource("3_oia73")

[node name="NextTileHolder" type="Control" parent="TopRight/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TopRight/Panel/MarginContainer/VBoxContainer/HBoxContainer/NextTileHolder"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TopRight/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TopRight/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Score: "
label_settings = ExtResource("3_oia73")

[node name="ScoreLabel" type="Label" parent="TopRight/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "100 feet!"
label_settings = ExtResource("3_oia73")

[node name="Label" type="Label" parent="TopRight/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(6.9, 5.66)
layout_mode = 2
text = "CONTROLS:
WASD to move player.
Arrow keys to move platforms."
label_settings = ExtResource("3_oia73")
autowrap_mode = 2

[node name="Center" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -95.0
offset_right = 138.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameOverPanel" type="Panel" parent="Center"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Center/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Center/GameOverPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Label" type="Label" parent="Center/GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!"
label_settings = ExtResource("4_de4ug")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Center/GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Center/GameOverPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Final Score: "
label_settings = ExtResource("3_oia73")

[node name="GameOverScoreLabel" type="Label" parent="Center/GameOverPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100 feet!"
label_settings = ExtResource("3_oia73")

[node name="GameOverMainMenuButton" type="Button" parent="Center/GameOverPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="PauseManager" parent="." instance=ExtResource("2_k57vt")]
visible = false

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wavpm")
volume_db = -5.0

[node name="SwitchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2w2a0")
volume_db = -15.0

[connection signal="focus_entered" from="Center/GameOverPanel/MarginContainer/VBoxContainer/GameOverMainMenuButton" to="." method="play_switch_sound"]
[connection signal="mouse_entered" from="Center/GameOverPanel/MarginContainer/VBoxContainer/GameOverMainMenuButton" to="." method="_on_game_over_main_menu_button_mouse_entered"]
[connection signal="pressed" from="Center/GameOverPanel/MarginContainer/VBoxContainer/GameOverMainMenuButton" to="." method="play_click_sound"]
[connection signal="pressed" from="Center/GameOverPanel/MarginContainer/VBoxContainer/GameOverMainMenuButton" to="." method="_on_game_over_main_menu_button_pressed"]
